Add second definition to knowledgebase and add remove methode
Signed-off-by: Oliver Geisel <geisel.oliver@googlemail.com>